--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="globals.css" />
-    <title>Vite App</title>
+    <title>Zadkhamaya | Personal Pages</title>
   </head>
   <body>
     <div class="container mx-auto">
