chore(landpage): base content

--- a/index.html
+++ b/index.html
@@ -8,8 +8,111 @@
     <title>Zadkhamaya | Personal Pages</title>
   </head>
   <body>
-    <div class="container mx-auto">
-      <h1 class="text-6xl p-2 bg-red-300">Devscale Mantul</h1>
-    </div>
+    <main class="max-w-3xl m-auto my-28 space-y-12">
+      <section class="flex gap-10 items-center">
+        <img
+          src="/public/profile_gap.jpg"
+          width="200px"
+          height="200px"
+          class="rounded-full"
+        />
+        <div class="text-white -space-y-0">
+          <p class="text-3xl font-semibold">Geofrie Azarya Putra</p>
+          <p class="text-xl font-medium">// <span id="element"></span></p>
+          <p class="font-light">
+            📍<span class="italic font-normal">South Jakarta, Indonesia.</span>
+          </p>
+        </div>
+      </section>
+      <section class="text-white space-y-4">
+        <p class="text-xl font-semibold italic">Hi there, I'm Geoff.</p>
+        <p>
+          I'm a Civil Engineer by day and 3D Artist / Self-taught Programmer by
+          night. My goal is to combine creative thinking and design with an
+          analytical approach to solve problems at intersection of business and
+          technology. I currently work as Design-Engineering Head Department at
+          Tasblock Industry Indonesia that responsible for engineering design,
+          product development and marketing materials.
+        </p>
+        <p>
+          Along with my experience, I've worked in various areas including
+          Industrial Design, Prototyping, 3D Visualization, Project Management
+          and Web Development. I work great in teams, a hard-worker and can be
+          counted on to consistently deliver above expectations.
+        </p>
+      </section>
+      <section class="grid grid-cols-3 gap-4 text-white">
+        <div class="card col-span-2">
+          <div class="h-full flex flex-col justify-between">
+            <div class="font-semibold text-2xl">Education</div>
+            <div class="space-y-1">
+              <div class="text-2xl font-medium">
+                Master of Civil Engineering
+              </div>
+              <div class="italic font-light">
+                Bandung Institute of Technology
+              </div>
+              <div class="text-2xl font-medium">
+                Bachelor of Civil Engineering
+              </div>
+              <div class="italic font-light">
+                Parahyangan Catholic University
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="card flex flex-col justify-between">
+          <div class="font-semibold text-2xl">Main Skills</div>
+          <div>
+            <div>Structural Engineering</div>
+            <div>Civil Engineering</div>
+            <div>Seismic Design</div>
+            <div>Finite Element Method</div>
+            <div>CAD Drawing</div>
+            <div>Lean Management</div>
+            <div>Critical Thinking</div>
+          </div>
+        </div>
+        <div class="card flex flex-col justify-between">
+          <div class="font-semibold text-2xl">Side Skills</div>
+          <div>
+            <div>3D CAD Modeling</div>
+            <div>3D Visualization</div>
+            <div>3D Printing</div>
+            <div>Photogrammetry</div>
+            <div>Photography</div>
+            <div></div>
+            <div></div>
+            <div></div>
+          </div>
+        </div>
+        <div class="card col-span-2 flex flex-col justify-between">
+          <div class="font-semibold text-2xl">Software</div>
+          <div>
+            <div>Autocad</div>
+            <div>ETABS</div>
+            <div>SAP2000</div>
+            <div>Blender 3D</div>
+            <div>Rhinoceros</div>
+            <div>Solidworks</div>
+            <div>Keyshot</div>
+            <div>Photoshop</div>
+            <div>Illustrator</div>
+            <div>InDesign</div>
+            <div>After Effects</div>
+          </div>
+        </div>
+      </section>
+      <section class="flex justify-around items-center gap-50">
+        <div class="text-white text-xl">Need more information?</div>
+        <button class="btn-primary">Contact me</button>
+      </section>
+      <section>
+        <footer class="text-center text-zinc-500/50 font-normal italic">
+          &copy; 2023 Geofrie Azarya Putra
+        </footer>
+      </section>
+    </main>
+    <script type="module" src="main.js"></script>
   </body>
 </html>
