chore(landpage): update layout

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="globals.css" />
     <title>Zadkhamaya | Personal Pages</title>
   </head>
-  <body>
-    <main class="max-w-3xl m-auto my-28 space-y-12">
-      <section class="flex gap-10 items-center">
+  <body class="mx-20 my-20">
+    <main class="max-w-3xl lg:m-auto">
+      <section class="flex gap-10 items-center justify-center">
         <img
           src="/public/profile_gap.jpg"
-          width="200px"
-          height="200px"
+          width="150px"
+          height="150px"
           class="rounded-full"
         />
         <div class="text-white -space-y-0">
@@ -24,8 +24,9 @@
           </p>
         </div>
       </section>
-      <section class="text-white space-y-4">
-        <p class="text-xl font-semibold italic">Hi there, I'm Geoff.</p>
+      <section class="text-white space-y-4 mt-10">
+        <hr />
+        <p class="text-3xl font-semibold italic">Hi there, I'm Geoff.</p>
         <p>
           I'm a Civil Engineer by day and 3D Artist / Self-taught Programmer by
           night. My goal is to combine creative thinking and design with an
@@ -40,11 +41,13 @@
           and Web Development. I work great in teams, a hard-worker and can be
           counted on to consistently deliver above expectations.
         </p>
+        <p>Thank you for visiting! 🥂</p>
+        <hr />
       </section>
-      <section class="grid grid-cols-3 gap-4 text-white">
-        <div class="card col-span-2">
-          <div class="h-full flex flex-col justify-between">
-            <div class="font-semibold text-2xl">Education</div>
+      <section class="grid grid-cols-1 lg:grid-cols-2 gap-4 text-white my-5">
+        <div class="cardnobg lg:col-span-2">
+          <div class="flex justify-between gap-8">
+            <div class="font-semibold text-2xl">🎓 Education</div>
             <div class="space-y-1">
               <div class="text-2xl font-medium">
                 Master of Civil Engineering
@@ -61,8 +64,8 @@
             </div>
           </div>
         </div>
-        <div class="card flex flex-col justify-between">
-          <div class="font-semibold text-2xl">Main Skills</div>
+        <div class="card flex lg:flex-col justify-between gap-8">
+          <div class="font-semibold text-2xl">🛠️ Expertise</div>
           <div>
             <div>Structural Engineering</div>
             <div>Civil Engineering</div>
@@ -73,39 +76,39 @@
             <div>Critical Thinking</div>
           </div>
         </div>
-        <div class="card flex flex-col justify-between">
-          <div class="font-semibold text-2xl">Side Skills</div>
+        <div class="card flex lg:flex-col justify-between gap-8">
+          <div class="font-semibold text-2xl">👨‍💻 Skills</div>
           <div>
             <div>3D CAD Modeling</div>
             <div>3D Visualization</div>
             <div>3D Printing</div>
-            <div>Photogrammetry</div>
             <div>Photography</div>
-            <div></div>
-            <div></div>
-            <div></div>
+            <div>HTML</div>
+            <div>CSS</div>
+            <div>Javascript</div>
           </div>
         </div>
-        <div class="card col-span-2 flex flex-col justify-between">
-          <div class="font-semibold text-2xl">Software</div>
-          <div>
-            <div>Autocad</div>
-            <div>ETABS</div>
-            <div>SAP2000</div>
-            <div>Blender 3D</div>
-            <div>Rhinoceros</div>
-            <div>Solidworks</div>
-            <div>Keyshot</div>
-            <div>Photoshop</div>
-            <div>Illustrator</div>
-            <div>InDesign</div>
-            <div>After Effects</div>
+        <div class="card lg:col-span-2 flex flex-col justify-between gap-8">
+          <div class="font-semibold text-2xl">💿 Software</div>
+          <div class="flex gap-2 flex-wrap">
+            <div class="software">Autocad</div>
+            <div class="software">ETABS</div>
+            <div class="software">SAP2000</div>
+            <div class="software">Blender 3D</div>
+            <div class="software">Rhinoceros</div>
+            <div class="software">Solidworks</div>
+            <div class="software">Plasticity</div>
+            <div class="software">Keyshot</div>
+            <div class="software">Adobe Creative</div>
+            <div class="software">VS Code</div>
           </div>
         </div>
       </section>
-      <section class="flex justify-around items-center gap-50">
-        <div class="text-white text-xl">Need more information?</div>
-        <button class="btn-primary">Contact me</button>
+      <section class="my-8">
+        <div class="flex flex-col items-center space-y-4">
+          <div class="text-white text-xl"><span id="element1"></span></div>
+          <button class="btn-primary">Contact me</button>
+        </div>
       </section>
       <section>
         <footer class="text-center text-zinc-500/50 font-normal italic">
