--- a/index.html
+++ b/index.html
@@ -106,8 +106,10 @@
       </section>
       <section class="my-8">
         <div class="flex flex-col items-center space-y-4">
-          <div class="text-white text-xl"><span id="element1"></span></div>
-          <button class="btn-primary">Contact me</button>
+          <div class="text-white text-2xl font-bold">
+            <span id="element1"></span>
+          </div>
+          <button id="confetbtn" class="btn-primary">Contact me</button>
         </div>
       </section>
       <section>
